GCA-36 Test coverage - getUnassignedTrainers method refactored and tested